Исправил ДЗ, согласно ТЗ

--- a/catalog.html
+++ b/catalog.html
@@ -14,27 +14,27 @@
 
 <h2>КАТАЛОГ:</h2>
 <p>
-    <a href="products/imag/irobot_roomba_980.jpg"
-       target="_blank">
-        <img src="products/imag/irobot_roomba_980.jpg"
-             alt="Фото робота-пылесоса VC iRobot roomba 980"
-             height="100"></a> <br>
+
+    <img src="products/imag/irobot_roomba_980.jpg"
+         alt="Фото робота-пылесоса VC iRobot roomba 980"
+         height="100">
+    <br>
     <a href="products/irobot_roomba_980.html">Робот-пылесос VR&nbsp;iRobot Roomba 980</a>
 </p>
 <p>
-    <a href="products/imag/midea_mvcr03.jpg"
-       target="_blank">
-        <img src="products/imag/midea_mvcr03.jpg"
-             alt="Фото робота-пылесоса midea mvcr03"
-             height="100"></a> <br>
+
+    <img src="products/imag/midea_mvcr03.jpg"
+         alt="Фото робота-пылесоса midea mvcr03"
+         height="100">
+    <br>
     <a href="products/midea_mvcr03.html">Робот-пылесос Midea MVCR03</a>
 </p>
 <p>
-    <a href="products/imag/proffi_ph8964.jpg"
-       target="_blank">
-        <img src="products/imag/proffi_ph8964.jpg"
-             alt="Фото робота-пылесоса proffi ph8964"
-             height="100"></a> <br>
+
+    <img src="products/imag/proffi_ph8964.jpg"
+         alt="Фото робота-пылесоса proffi ph8964"
+         height="100">
+    <br>
     <a href="products/proffi_ph8964.html">Робот-пылесос Proffi PH8964</a>
 </p>
 
