--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>ROBO-SET</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<ul>
+<ul class="menu">
     <li><a href="index.html">Главная</a></li>
     <li><a href="catalog.html">Каталог</a></li>
     <li><a href="contacts.html">Контакты</a></li>
@@ -13,10 +14,7 @@
 <hr>
 
 <h1>ROBO-SET</h1>
-<h2>&laquo;Выбери себе
-    <del>у</del>
-    слугу по-вкусу&raquo;
-</h2>
+<h2>&laquo;Выбери себе <del>у</del>слугу по-вкусу&raquo;</h2>
 
 
 <footer>
