--- a/products/irobot_roomba_980.html
+++ b/products/irobot_roomba_980.html
@@ -3,55 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>ROBO-SET:products</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-<ul>
+<ul class="menu">
     <li><a href="../index.html">Главная</a></li>
     <li><a href="../catalog.html">Каталог</a></li>
     <li><a href="../contacts.html">Контакты</a></li>
 </ul>
-
 <hr>
-<h2>Робот-пылесос<br>
-    VC&nbsp;iRobot Roomba 980</h2>
-<a href="imag/irobot_roomba_980.jpg"
-   target="_blank">
-    <img src="imag/irobot_roomba_980.jpg"
-         alt="Фото робота-пылесоса VC iRobot roomba 980"
-         height="100"></a> <br>
-<h3>Описание товара:</h3>
-<p>Робот пылесос&nbsp;VC iRobot Roomba 980 обеспечивает качественную сухую
-    уборку в&nbsp;автоматическом режиме. Устройство может использоваться для
-    очистки от&nbsp;мусора и&nbsp;загрязнений ковровых покрытий, паркета, плитки и&nbsp;линолеума.</p>
-<h3>Характеристики товара</h3>
-<b>Ориентация в&nbsp;пространстве:</b>
-<ul>
-    <li>Количество режимов работы&nbsp;&mdash; 2</li>
-    <li>Слепой, как крот</li>
-</ul>
+<div class="product">
+    <h2>Робот-пылесос<br>
+        VC&nbsp;iRobot Roomba 980</h2>
+    <a href="imag/irobot_roomba_980.jpg" target="_blank">
+        <img src="imag/irobot_roomba_980.jpg"
+             alt="Фото робота-пылесоса VC iRobot roomba 980"></a> <br>
+    <h3>Описание товара:</h3>
+    <p class="short_descriptions_text">Робот пылесос&nbsp;VC iRobot Roomba 980 обеспечивает качественную сухую
+        уборку в&nbsp;автоматическом режиме. Устройство может использоваться для
+        очистки от&nbsp;мусора и&nbsp;загрязнений ковровых покрытий, паркета, плитки и&nbsp;линолеума.</p>
+    <h3>Характеристики товара</h3>
+    <b>Ориентация в&nbsp;пространстве:</b>
+    <ul>
+        <li>Количество режимов работы&nbsp;&mdash; 2</li>
+        <li>Слепой, как крот, но пыль протрёт</li>
+    </ul>
 
-<b>Функции:</b>
-<ul>
-    <li>Сухая уборка&nbsp;&mdash; Да</li>
-    <li>Влажная уборка&nbsp;&mdash; Да</li>
-    <li>Ограничение времени уборки&nbsp;&mdash; 90&nbsp;мин.</li>
-</ul>
+    <b>Функции:</b>
+    <ul>
+        <li>Сухая уборка&nbsp;&mdash; Да</li>
+        <li>Влажная уборка&nbsp;&mdash; Да</li>
+        <li>Ограничение времени уборки&nbsp;&mdash; 90&nbsp;мин.</li>
+    </ul>
 
-<h3>Подробное описание товара:</h3>
-<p>Пылесос оборудован усовершенствованным щёточным узлом,
-    инновационным фильтром, отсеком для пыли и&nbsp;отдельной ёмкостью
-    для сбора шерсти. Присутствует система навигации iAdapt,
-    позволяющая прибору работать на&nbsp;различных напольных покрытиях.
-    Ограничитель движения повышает удобство использования техники в
-    помещении с&nbsp;большим количеством проводов.
-    Робот оснащён устройством, позволяющим определять степень
-    загрязнения поверхности. Специальный датчик, встроенный в&nbsp;прибор,
-    определяет высоту и&nbsp;предохраняет от&nbsp;падения со&nbsp;ступенек.
-    Низкий уровень шума повышает комфортность применения техники
-    в&nbsp;жилых помещениях.</p>
+    <h3>Подробное описание товара:</h3>
+    <p class ="full_descriptions_text">Пылесос оборудован усовершенствованным щёточным узлом,
+        инновационным фильтром, отсеком для пыли и&nbsp;отдельной ёмкостью
+        для сбора шерсти. Присутствует система навигации iAdapt,
+        позволяющая прибору работать на&nbsp;различных напольных покрытиях.
+        Ограничитель движения повышает удобство использования техники в
+        помещении с&nbsp;большим количеством проводов.
+        Робот оснащён устройством, позволяющим определять степень
+        загрязнения поверхности. Специальный датчик, встроенный в&nbsp;прибор,
+        определяет высоту и&nbsp;предохраняет от&nbsp;падения со&nbsp;ступенек.
+        Низкий уровень шума повышает комфортность применения техники
+        в&nbsp;жилых помещениях.</p>
+</div>
 
 
-&lt;
 <footer>
     <hr>
     Copyright &copy;&nbsp;Михаил Михайлов<br>
