--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<ul class="menu">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="catalog.html">Каталог</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-</ul>
+<div class="header">
+<img class="logo" src="images/logo.jpg">
+    <ul class="menu">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+</div>
 <hr>
 
 <h1>ROBO-SET</h1>
 <h2>&laquo;Выбери себе <del>у</del>слугу по-вкусу&raquo;</h2>
 
 
-<footer>
+<div class="footer">
     <hr>
     Copyright &copy;&nbsp;Михаил Михайлов<br>
     Все права защищены.
-</footer>
+</div>
 </body>
 </html>
