--- a/products/proffi_ph8964.html
+++ b/products/proffi_ph8964.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<p><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,11 +7,14 @@
 </head>
 <body>
 
-    <ul class="menu">
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="../catalog.html">Каталог</a></li>
-        <li><a href="../contacts.html">Контакты</a></li>
-    </ul>
+    <div class="header">
+        <img class="logo" src="../images/logo.jpg">
+        <ul class="menu">
+            <li><a href="../index.html">Главная</a></li>
+            <li><a href="../catalog.html">Каталог</a></li>
+            <li><a href="../contacts.html">Контакты</a></li>
+        </ul>
+    </div>
     <hr>
     <div class="product">
     <h2>Робот-пылесос<br>
@@ -49,10 +52,10 @@
     </p>
 </div>
 
-<footer>
+<div class="footer">
     <hr>
     Copyright &copy;&nbsp;Михаил Михайлов<br>
     Все права защищены.
-</footer>
+</div>
 </body>
-</html>
+</html></p>
