--- a/catalog.html
+++ b/catalog.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<ul class="menu">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="catalog.html">Каталог</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-</ul>
+<div class="header">
+<img class="logo" src="images/logo.jpg">
+    <ul class="menu">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+</div>
 <hr>
 
 <h2>КАТАЛОГ:</h2>
@@ -36,10 +39,10 @@
     <a href="products/proffi_ph8964.html">Робот-пылесос Proffi PH8964</a>
 </p>
 
-<footer>
+<div class="footer">
     <hr>
     Copyright &copy;&nbsp;Михаил Михайлов<br>
     Все права защищены.
-</footer>
+</div>
 </body>
 </html>
