--- a/products/irobot_roomba_980.html
+++ b/products/irobot_roomba_980.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<p><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-<ul class="menu">
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="../catalog.html">Каталог</a></li>
-    <li><a href="../contacts.html">Контакты</a></li>
-</ul>
+<div class="header">
+<img class="logo" src="../images/logo.jpg">
+    <ul class="menu">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../catalog.html">Каталог</a></li>
+        <li><a href="../contacts.html">Контакты</a></li>
+    </ul>
+</div>
 <hr>
 <div class="product">
     <h2>Робот-пылесос<br>
@@ -51,10 +54,10 @@
 </div>
 
 
-<footer>
+<div class="footer">
     <hr>
     Copyright &copy;&nbsp;Михаил Михайлов<br>
     Все права защищены.
-</footer>
+</div>
 </body>
-</html>
+</html></p>
