--- a/catalog.html
+++ b/catalog.html
@@ -6,43 +6,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="header">
-<img class="logo" src="images/logo.jpg">
-    <ul class="menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-    </ul>
-</div>
-<hr>
-
-<h2>КАТАЛОГ:</h2>
-<p>
-
-    <img src="products/imag/irobot_roomba_980.jpg"
-         alt="Фото робота-пылесоса VC iRobot roomba 980">
-    <br>
-    <a href="products/irobot_roomba_980.html">Робот-пылесос VR&nbsp;iRobot Roomba 980</a>
-</p>
-<p>
-
-    <img src="products/imag/midea_mvcr03.jpg"
-         alt="Фото робота-пылесоса midea mvcr03">
-    <br>
-    <a href="products/midea_mvcr03.html">Робот-пылесос Midea MVCR03</a>
-</p>
-<p>
-
-    <img src="products/imag/proffi_ph8964.jpg"
-         alt="Фото робота-пылесоса proffi ph8964">
-    <br>
-    <a href="products/proffi_ph8964.html">Робот-пылесос Proffi PH8964</a>
-</p>
-
-<div class="footer">
+    <div class="header">
+        <img class="logo" src="images/logo.jpg">
+        <ul class="menu">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+    </div>
     <hr>
-    Copyright &copy;&nbsp;Михаил Михайлов<br>
-    Все права защищены.
-</div>
+    <div class="catalog_list">
+        <h2>КАТАЛОГ:</h2>
+        <p>
+            <img src="products/imag/irobot_roomba_980.jpg"
+            alt="Фото робота-пылесоса VC iRobot roomba 980">
+            <br>
+            <a href="products/irobot_roomba_980.html">Робот-пылесос VR&nbsp;iRobot Roomba 980</a>
+        </p>
+        <p>
+
+            <img src="products/imag/midea_mvcr03.jpg"
+            alt="Фото робота-пылесоса midea mvcr03">
+            <br>
+            <a href="products/midea_mvcr03.html">Робот-пылесос Midea MVCR03</a>
+        </p>
+        <p>
+
+            <img src="products/imag/proffi_ph8964.jpg"
+            alt="Фото робота-пылесоса proffi ph8964">
+            <br>
+            <a href="products/proffi_ph8964.html">Робот-пылесос Proffi PH8964</a>
+        </p>
+    </div>
+    <div class="footer">
+        <hr>
+        Copyright &copy;&nbsp;Михаил Михайлов<br>
+        Все права защищены.
+    </div>
 </body>
 </html>
