--- a/catalog.html
+++ b/catalog.html
@@ -7,14 +7,13 @@
 </head>
 <body>
     <div class="header">
-        <img class="logo" src="images/logo.jpg">
+        <img class="logo" src="images/logo2.jpg">
         <ul class="menu">
             <li><a href="index.html">Главная</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="contacts.html">Контакты</a></li>
         </ul>
     </div>
-    <hr>
     <div class="catalog_list">
         <h2>КАТАЛОГ:</h2>
         <p>
@@ -39,7 +38,6 @@
         </p>
     </div>
     <div class="footer">
-        <hr>
         Copyright &copy;&nbsp;Михаил Михайлов<br>
         Все права защищены.
     </div>
