--- a/contacts.html
+++ b/contacts.html
@@ -7,14 +7,13 @@
 </head>
 <body>
     <div class="header">
-        <img class="logo" src="images/logo.jpg">
+        <img class="logo" src="images/logo2.jpg">
         <ul class="menu">
             <li><a href="index.html">Главная</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="contacts.html">Контакты</a></li>
         </ul>
     </div>
-    <hr>
     <div class="contacts">
         <form action="">
             <h2>Напишите нам</h2>
@@ -65,7 +64,6 @@
         </ul>
     </div>
     <div class="footer">
-        <hr>
         Copyright &copy;&nbsp;Михаил Михайлов<br>
         Все права защищены.
     </div>
