--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
 </head>
 <body>
     <div class="header">
-        <img class="logo" src="images/logo.jpg">
+        <img class="logo" src="images/logo2.jpg">
         <ul class="menu">
             <li><a href="index.html">Главная</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="contacts.html">Контакты</a></li>
         </ul>
     </div>
-    <hr>
 
     <h1>ROBO-SET</h1>
     <h2>&laquo;Выбери себе <del>у</del>слугу по-вкусу&raquo;</h2>
 
 
     <div class="footer">
-        <hr>
         Copyright &copy;&nbsp;Михаил Михайлов<br>
         Все права защищены.
     </div>
