--- a/products/irobot_roomba_980.html
+++ b/products/irobot_roomba_980.html
@@ -7,14 +7,13 @@
     </head>
     <body>
         <div class="header">
-            <img class="logo" src="../images/logo.jpg">
+            <img class="logo" src="../images/logo2.jpg">
             <ul class="menu">
                 <li><a href="../index.html">Главная</a></li>
                 <li><a href="../catalog.html">Каталог</a></li>
                 <li><a href="../contacts.html">Контакты</a></li>
             </ul>
         </div>
-        <hr>
         <div class="product">
             <h2>Робот-пылесос<br>
             VC&nbsp;iRobot Roomba 980</h2>
@@ -71,7 +70,6 @@
 
 
             <div class="footer">
-                <hr>
                 Copyright &copy;&nbsp;Михаил Михайлов<br>
                 Все права защищены.
             </div>
