--- a/products/midea_mvcr03.html
+++ b/products/midea_mvcr03.html
@@ -7,14 +7,13 @@
 </head>
 <body>
     <div class="header">
-        <img class="logo" src="../images/logo.jpg">
+        <img class="logo" src="../images/logo2.jpg">
         <ul class="menu">
             <li><a href="../index.html">Главная</a></li>
             <li><a href="../catalog.html">Каталог</a></li>
             <li><a href="../contacts.html">Контакты</a></li>
         </ul>
     </div>
-    <hr>
     <div class="product">
         <h2>Робот-пылесос<br>
         Midea MVCR03</h2>
@@ -73,7 +72,6 @@
         </div>
 
         <div class="footer">
-            <hr>
             Copyright &copy;&nbsp;Михаил Михайлов<br>
             Все права защищены.
         </div>
