--- a/products/proffi_ph8964.html
+++ b/products/proffi_ph8964.html
@@ -8,14 +8,13 @@
     <body>
 
         <div class="header">
-            <img class="logo" src="../images/logo.jpg">
+            <img class="logo" src="../images/logo2.jpg">
             <ul class="menu">
                 <li><a href="../index.html">Главная</a></li>
                 <li><a href="../catalog.html">Каталог</a></li>
                 <li><a href="../contacts.html">Контакты</a></li>
             </ul>
         </div>
-        <hr>
         <div class="product">
             <h2>Робот-пылесос<br>
             Proffi PH8964</h2>
@@ -69,7 +68,6 @@
             </div>
 
             <div class="footer">
-                <hr>
                 Copyright &copy;&nbsp;Михаил Михайлов<br>
                 Все права защищены.
             </div>
