--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <img class="logo" src="images/logo2.jpg">
-        <ul class="menu">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </div>
+    <div class="container">
+        <div class="header">
+            <img class="logo" src="images/logo2.jpg">
+            <ul class="menu">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+        </div>
 
-    <h1>ROBO-SET</h1>
-    <h2>&laquo;Выбери себе <del>у</del>слугу по-вкусу&raquo;</h2>
+        <h1>ROBO-SET</h1>
+        <h2>&laquo;MADE FOR YOU TO DO FOR YOU&raquo; (everything is legal)</h2>
 
-
-    <div class="footer">
-        Copyright &copy;&nbsp;Михаил Михайлов<br>
-        Все права защищены.
+        <div class="footer">
+            Copyright &copy;&nbsp;Михаил Михайлов<br>
+            Все права защищены.
+        </div>
     </div>
 </body>
 </html>
