--- a/catalog.html
+++ b/catalog.html
@@ -6,43 +6,107 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <img class="logo" src="images/logo2.jpg">
-        <ul class="menu">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </div>
-    <div class="catalog_list">
+    <div class="container">
+        <div class="header">
+            <img class="logo" src="images/logo2.jpg">
+            <ul class="menu">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+        </div>
+
         <h2>КАТАЛОГ:</h2>
-        <div class="catalog_element">
-            <img src="products/imag/irobot_roomba_980.jpg"
-            alt="Фото робота-пылесоса VC iRobot roomba 980">
-            <text class="short_descriptions_text">Робот пылесос&nbsp;VC iRobot Roomba 980 обеспечивает качественную сухую уборку в&nbsp;автоматическом режиме. Устройство может использоваться для
-            очистки от&nbsp;мусора и&nbsp;загрязнений ковровых покрытий, паркета, плитки и&nbsp;линолеума.</text>
-            <br>
-            <a href="products/irobot_roomba_980.html">Робот-пылесос VR&nbsp;iRobot Roomba 980</a>
-        </div>
-        <div class="catalog_element">
-            <img src="products/imag/midea_mvcr03.jpg"
-            alt="Фото робота-пылесоса midea mvcr03">
-            <text class="short_descriptions_text">Робот-пылесос Midea MVCR03 оснащён щёткой из&nbsp;микрофибры, которая легко справляется с&nbsp;пылью, стойкими загрязнениями, шерстью домашних животных и&nbsp;прочим мусором. Сбор выполняется в&nbsp;специальный пластиковый контейнер&nbsp;&mdash;доступ к&nbsp;нему
-            можно получить, просто нажав на&nbsp;крышку устройства.</text>
-            <br>
-            <a href="products/midea_mvcr03.html">Робот-пылесос Midea MVCR03</a>
-        </div>
-        <div class="catalog_element">
-            <img src="products/imag/proffi_ph8964.jpg"
-            alt="Фото робота-пылесоса proffi ph8964">
-            <text class="short_descriptions_text">Робот-пылесос Proffi PH8964 может работать в&nbsp;режимах сухой и&nbsp;влажной уборки. Он&nbsp;эффективно собирает пыль, крошки, волосы, шерсть домашних животных и&nbsp;прочий мусор и&nbsp;с&nbsp;гладких покрытий, например, кафельной плитки и&nbsp;линолеума,
-            и&nbsp;с&nbsp;ковров с&nbsp;коротким ворсом высотой до&nbsp;полутора сантиметров.</text>
-            <br>
-            <a href="products/proffi_ph8964.html">Робот-пылесос Proffi PH8964</a>
+        <div class="catalog_list">
+            <div class="catalog_element">
+                <img src="products/imag/irobot_roomba_980.jpg"
+                alt="Фото робота-пылесоса VC iRobot roomba 980">
+                <br>
+                <a href="products/irobot_roomba_980.html">Робот-пылесос VR&nbsp;iRobot Roomba 980</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/midea_mvcr03.jpg"
+                alt="Фото робота-пылесоса midea mvcr03">
+                <br>
+                <a href="products/midea_mvcr03.html">Робот-пылесос Midea MVCR03</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/proffi_ph8964.jpg"
+                alt="Фото робота-пылесоса proffi ph8964">
+                <br>
+                <a href="products/proffi_ph8964.html">Робот-пылесос Proffi PH8964</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/irobot_roomba_980.jpg"
+                alt="Фото робота-пылесоса VC iRobot roomba 980">
+                <br>
+                <a href="products/irobot_roomba_980.html">Робот-пылесос VR&nbsp;iRobot Roomba 980</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/midea_mvcr03.jpg"
+                alt="Фото робота-пылесоса midea mvcr03">
+                <br>
+                <a href="products/midea_mvcr03.html">Робот-пылесос Midea MVCR03</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/proffi_ph8964.jpg"
+                alt="Фото робота-пылесоса proffi ph8964">
+                <br>
+                <a href="products/proffi_ph8964.html">Робот-пылесос Proffi PH8964</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/irobot_roomba_980.jpg"
+                alt="Фото робота-пылесоса VC iRobot roomba 980">
+                <br>
+                <a href="products/irobot_roomba_980.html">Робот-пылесос VR&nbsp;iRobot Roomba 980</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/midea_mvcr03.jpg"
+                alt="Фото робота-пылесоса midea mvcr03">
+                <br>
+                <a href="products/midea_mvcr03.html">Робот-пылесос Midea MVCR03</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/proffi_ph8964.jpg"
+                alt="Фото робота-пылесоса proffi ph8964">
+                <br>
+                <a href="products/proffi_ph8964.html">Робот-пылесос Proffi PH8964</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/irobot_roomba_980.jpg"
+                alt="Фото робота-пылесоса VC iRobot roomba 980">
+                <br>
+                <a href="products/irobot_roomba_980.html">Робот-пылесос VR&nbsp;iRobot Roomba 980</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/midea_mvcr03.jpg"
+                alt="Фото робота-пылесоса midea mvcr03">
+                <br>
+                <a href="products/midea_mvcr03.html">Робот-пылесос Midea MVCR03</a>
+
+            </div>
+            <div class="catalog_element">
+                <img src="products/imag/proffi_ph8964.jpg"
+                alt="Фото робота-пылесоса proffi ph8964">
+                <br>
+                <a href="products/proffi_ph8964.html">Робот-пылесос Proffi PH8964</a>
+
+            </div>
         </div>
         <div class="footer">
             Copyright &copy;&nbsp;Михаил Михайлов<br>
             Все права защищены.
         </div>
-    </body>
-    </html>
+    </div>
+</body>
+</html>
