--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <h1>ROBO-SET</h1>
-        <h2>&laquo;MADE FOR YOU TO DO FOR YOU&raquo; (everything is legal)</h2>
+        <h2>&laquo;MADE FOR YOU TO DO FOR YOU&raquo; (in-law)</h2>
 
         <div class="footer">
             Copyright &copy;&nbsp;Михаил Михайлов<br>
