--- a/products/irobot_roomba_980.html
+++ b/products/irobot_roomba_980.html
@@ -1,11 +1,12 @@
-<p><!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>ROBO-SET:products</title>
-        <link rel="stylesheet" href="../style.css">
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>ROBO-SET:products</title>
+    <link rel="stylesheet" href="../style.css">
+</head>
+<body>
+    <div class="container">
         <div class="header">
             <img class="logo" src="../images/logo2.jpg">
             <ul class="menu">
@@ -17,13 +18,23 @@
         <div class="product">
             <h2>Робот-пылесос<br>
             VC&nbsp;iRobot Roomba 980</h2>
-            <a href="imag/irobot_roomba_980.jpg" target="_blank">
-                <img src="imag/irobot_roomba_980.jpg"
-                alt="Фото робота-пылесоса VC iRobot roomba 980"></a> <br>
-                <h3>Описание товара:</h3>
-                <p class="short_descriptions_text">Робот пылесос&nbsp;VC iRobot Roomba 980 обеспечивает качественную сухую
-                    уборку в&nbsp;автоматическом режиме. Устройство может использоваться для
-                очистки от&nbsp;мусора и&nbsp;загрязнений ковровых покрытий, паркета, плитки и&nbsp;линолеума.</p>
+            <div class="product_lebel">
+                <div class="product_image">
+                    <a href="imag/irobot_roomba_980.jpg" target="_blank">
+                        <img src="imag/irobot_roomba_980.jpg"
+                        alt="Фото робота-пылесоса VC iRobot roomba 980"></a>
+                    </div>
+                    <div class="product_item">
+                        <div class="item_text">
+                            Робот пылесос&nbsp;VC&nbsp;iRobot Roomba 980 обеспечивает качественную сухую
+                            уборку в&nbsp;автоматическом режиме. Устройство может использоваться для
+                            очистки от&nbsp;мусора и&nbsp;загрязнений ковровых покрытий, паркета, плитки и&nbsp;линолеума.
+                        </div>
+                        <div class="item_button">
+                            <button type="submit">Купить</button>
+                        </div>
+                    </div>
+                </div>
                 <h3>Характеристики товара</h3>
                 <table>
                     <tr>
@@ -68,10 +79,11 @@
                 в&nbsp;жилых помещениях.</p>
             </div>
 
-
             <div class="footer">
                 Copyright &copy;&nbsp;Михаил Михайлов<br>
                 Все права защищены.
             </div>
-        </body>
-        </html></p>
+
+        </div>
+    </body>
+    </html>
