--- a/products/proffi_ph8964.html
+++ b/products/proffi_ph8964.html
@@ -1,12 +1,12 @@
-<p><!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>ROBO-SET:products</title>
-        <link rel="stylesheet" href="../style.css">
-    </head>
-    <body>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>ROBO-SET:products</title>
+    <link rel="stylesheet" href="../style.css">
+</head>
+<body>
+    <div class="container">
         <div class="header">
             <img class="logo" src="../images/logo2.jpg">
             <ul class="menu">
@@ -18,14 +18,27 @@
         <div class="product">
             <h2>Робот-пылесос<br>
             Proffi PH8964</h2>
-            <a href="imag/proffi_ph8964.jpg" target="_blank">
-                <img src="imag/proffi_ph8964.jpg"
-                alt="Фото робота-пылесоса proffi ph8964"></a>
-                <h3>Описание товара:</h3>
-                <p class="short_descriptions_text">Робот-пылесос Proffi PH8964 может работать в&nbsp;режимах сухой и&nbsp;влажной уборки.
-                    Он&nbsp;эффективно собирает пыль, крошки, волосы, шерсть домашних животных и
-                    прочий мусор и&nbsp;с&nbsp;гладких покрытий, например, кафельной плитки и&nbsp;линолеума,
-                и&nbsp;с&nbsp;ковров с&nbsp;коротким ворсом высотой до&nbsp;полутора сантиметров.</p>
+            <div class="product_lebel">
+                <div class="product_image">
+                    <a href="imag/proffi_ph8964.jpg" target="_blank">
+                        <img src="imag/proffi_ph8964.jpg"
+                        alt="Фото робота-пылесоса proffi ph8964"></a>
+                    </div>
+                    <div class="product_item">
+                        <div class="item_text">
+                            Робот-пылесос Proffi PH8964 может работать в&nbsp;режимах сухой и&nbsp;влажной уборки.
+                            Он&nbsp;эффективно собирает пыль, крошки, волосы, шерсть домашних животных и
+                            прочий мусор и&nbsp;с&nbsp;гладких покрытий, например, кафельной плитки и&nbsp;линолеума,
+                            и&nbsp;с&nbsp;ковров с&nbsp;коротким ворсом высотой до&nbsp;полутора сантиметров.
+                        </div>
+
+                        <div class="item_button">
+                            <button type="submit">Купить</button>
+                        </div>
+
+                    </div>
+
+                </div>
                 <h3>Характеристики товара</h3>
                 <table>
                     <tr>
@@ -43,6 +56,7 @@
                         <td colspan="2">Поддержка приложением.</td>
                     </tr>
                 </table>
+
                 <b>Ориентация в&nbsp;пространстве:</b>
                 <ul>
                     <li>Инфракрасный луч&nbsp;&mdash; Да</li>
@@ -63,13 +77,16 @@
                     Боковые щётки быстро вращаются и&nbsp;направляют мусор в&nbsp;контейнер (0,35&nbsp;л).
                     Резервуар легко снимается, его удобно очищать. НЕРА-фильтр надёжно удерживает
                     внутри мельчайшую пыльцу и&nbsp;грибковые споры&nbsp;&mdash; потенциальные
-                    источники аллергии. Для протирки полов прилагается салфетка из&nbsp;микрофибры.
-                </p>
+                источники аллергии. Для протирки полов прилагается салфетка из&nbsp;микрофибры.</p>
             </div>
 
             <div class="footer">
                 Copyright &copy;&nbsp;Михаил Михайлов<br>
                 Все права защищены.
             </div>
-        </body>
-        </html></p>
+
+        </div>
+
+
+    </body>
+    </html>
