Отверстал часть ДЗ №6:
-1 блок - готов
-2 блок - готов
- 3 блок - не готов
- 4 блок - не готов
-5 блок - не готов

--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -2,10 +2,72 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Lesson_6</title>
 	<link rel="stylesheet" href="style.css"></link>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 </head>
 <body>
-	
+	<div class="container">
+		<div class="slider_chair">
+			<div class="header">
+				<a href="#"><img src="img/logo.svg" alt="logo"></a>
+				<ul class="menu">
+					<li class="menu_list"><a href="#" class="menu_link menu_link_active">HOME</a></li>
+					<li class="menu_list"><a href="#" class="menu_link">PRODUCTS</a></li>
+					<li class="menu_list"><a href="#" class="menu_link">HISTORY</a></li>
+					<li class="menu_list"><a href="#" class="menu_link">SHOWROOM</a></li>
+					<li class="menu_list"><a href="#" class="menu_link">CONTACT</a></li>
+					<li class="menu_list"><a href="#" class="menu_link"><img src="img/search.svg" alt="search"></a></li>
+				</ul>
+			</div>
+			<div class="slider_text">
+				<div class="tranding">trending</div>
+				<h2 class="top_name">Fishnet Chair</h2>
+				<p class="str">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
+				or highly polished chrome.</p>
+				<a href="#" class="button">Order Us</a>
+			</div>
+			<div class="slider_pag">
+				<a href="#" class="circle"></a>
+				<a href="#" class="circle circle_active"></a>
+				<a href="#" class="circle"></a>
+			</div>
+		</div>
+		<div class="gap_block">
+			<div class="gap_header">
+				<ul class="gap_header_menu_left">
+					<li class="gap_header_menu_left_item">
+						<a href="#" class="gap_header_menu_left_item_link gap_header_menu_left_item_link_active">Featured</a>
+						<a href="#" class="gap_header_menu_left_item_link">New</a>
+					</li>
+				</ul>
+				<ul class="gap_header_menu_right">
+					<li>
+						<a href ="#" class="gap_header_menu_right_item_link">explore all<img src="img/arrow.svg" alt=">" width="9px" height="12px"></a>
+					</li>
+
+				</ul>
+			</div>
+
+			<div class="gap_boxes">
+
+				<div class="gap_boxes_body">
+
+					<ul class="box_body_column">
+						<li class="box_body_list_arrow"><img src="img/arrow.svg" width="12px" height="20px" alt=">"></li>
+						<li class="box_body_list_title">Fishnet Chair</li>
+						<li class="box_body_list_text">
+							Seat and back with upholstery made of cold cure foam.
+							Steel frame, available in matt powder-coated black or
+							highly polished chrome.
+						</li>
+					</ul>
+				</div>
+				<a href="#" class="gap_boxes_body"><img src="img/product-2.jpg" alt="some_pict"></a>
+				<a href="#" class="gap_boxes_body"><img src="img/product-3.jpg" alt="some_pict"></a>
+				<a href="#" class="gap_boxes_body"><img src="img/product-4.jpg" alt="some_pict"></a>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
